test/Runner/errors/tests/MI/Test6.mi.js
mi("Suite", () => {
	emerge("123")
});